kube/server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vantage6-server-ingress
  namespace: vantage6-server
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: vantage6-server-backend-service
            port:
              number: 80
      - path: /store
        pathType: Prefix
        backend:
          service:
            name: vantage6-store-backend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vantage6-server-frontend-service
            port:
              number: 80
