kube/node-deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: v6-node
---
apiVersion: v1
kind: Namespace
metadata:
  name: v6-jobs
---
# Policy to disable job's networking, except with the Node
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: v6-jobs-allow-egress-to-node-proxy-only
  namespace: v6-jobs
spec:
  podSelector: {} # This selects all pods in the v6-jobs namespace
  policyTypes:
  - Egress
  egress:
  - {}
---
apiVersion: v1
kind: Pod
metadata:
  name: vantage6-node
  namespace: v6-jobs
  labels:
    app: v6-node-server-proxy
spec:
  hostname: v6-node-pod
  subdomain: v6-pod-subdomain
  # selector:
  #   matchLabels:
  #     app: vantage6-node
  # template:
  #   metadata:
  #     labels:
  #       app: vantage6-node

  containers:
  - name: vantage6-node
    image: harbor2.vantage6.ai/infrastructure/node:v5
    command: ["vnode-local", "start", "-c", "/app/config/config.yml", "--dockerized"]
    volumeMounts:
    - name: task-files-root
      mountPath: /app/tasks
    - name: kube-config-file
      mountPath: /app/.kube/config
    - name: config-volume
      mountPath: /app/config
    - name: database-volume
      mountPath: /app/databases/default.csv
    resources:
      requests:
        memory: "1024Mi"
        cpu: "500m"
      limits:
        memory: "1Gi"
        cpu: "1"

  volumes:
  - name: task-files-root
    hostPath:
      path: /tmp/v6-tasks
      type: DirectoryOrCreate
  - name: kube-config-file
    hostPath:
      path: /Users/frankmartin/.kube/config.v6
  - name: config-volume
    configMap:
      name: vantage6-node-config
  - name: database-volume
    hostPath:
      path: /Users/frankmartin/Library/Application Support/vantage6/dev/five/five_node_1.csv
---
apiVersion: v1
kind: Service
metadata:
  name: v6proxy-subdomain
  namespace: v6-jobs
spec:
  selector:
    app: v6-node-server-proxy
  ports:
  - protocol: TCP
    port:  4567
    targetPort:  4567
